# web-scrapper

./: .gitignore  main.py  pyproject.toml
config/: config.ini  scrapoxy.crt  settings.py
img_scrapper/pixeldrain/: db.py  run.py
